css/style.css
/* ... */
.checkbox-entry.radio input:checked + span:before {
    border-color: #BA3957;
    background-color: #BA3957;
    border-width: 7px;
}

.checkbox-entry.light.radio input:checked + span:after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 20px;
    height: 20px;
    border: 2px #eee solid;
    border-radius: 10px;
    -webkit-border-radius: 10px;
}

.shipp_method .simple-text {
    margin-left: 35px;
}

.recept i {
    color: #BA3957;
    font-size: 105px;
}

@media (max-width: 991px) {
    .recept i {
        font-size: 75px;
    }
}

.shipp_method .checkbox-entry span:before {
    border-color: #424242;
}

.input-with-icon {
    position: relative;
}

.input-with-icon i {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    right: 10px;
    color: #999999;
    cursor: pointer;
    font-size: 20px;
}

.exp-date {
    text-transform: uppercase;
    font-weight: bold;
}

/*GAlleryDetail*/

.galleryDetail {
    padding-left: 100px;
    padding-right: 100px;
}

@media (max-width: 1400px) {
    .galleryDetail {
        padding-left: 40px;
        padding-right: 40px;
    }
}

@media (max-width: 1200px) {
    .galleryDetail {
        padding-left: 0px;
        padding-right: 0px;
    }
}

.galleryDetail .swiper-slide {
    height: 630px;
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
}

.galleryDetail .swiper-button-prev.type-4:before,
.galleryDetail .swiper-button-next.type-4:before {
    border-color: #fff;
}

.galleryInfoDetail h6 {
    width: 50%;
    float: left;
    padding-right: 10px;
    letter-spacing: 0;
}

.galleryInfoDetail span {
    width: 50%;
    float: left;
    letter-spacing: 1px;
}

.otherProject {
    float: left;
    width: 10%;
    margin: 0 0.5%;
    overflow: hidden;
}

.otherProject img {
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
    backface-visibility: hidden;
}

.otherProject:hover img {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
    opacity: 0.7;
    backface-visibility: hidden;
}

.otherProject.frst {
    margin-left: 1%;
}

.galleryInfoDetail .social {
    margin-top: -5px;
}

@media (max-width: 991px) {
    .otherProject {
        width: 19%;
        margin-bottom: 1%;
    }

    .otherProject.frst {
        margin-left: 0.5%;
    }

    .galleryDetail .swiper-slide {
        height: 330px;
    }

    .galleryInfoDetail h6 {
        width: 40%;
    }

    .galleryInfoDetail span {
        width: 40%;
    }
}

@media (max-width: 767px) {
    .otherProject {
        width: 24%;
    }

    .galleryInfoDetail h6 {
        width: 45%;
    }

    .galleryInfoDetail span {
        width: 55%;
    }
}

.gallery.element-item {
    width: 24%;
    float: left;
    margin: 0.5%;
    position: relative;
    cursor: pointer;
}

.gallery.element-item a {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 6;
}

.gallery.type2.element-item {
    width: 32%;
}

.gallery.type3.element-item, .gallery.type6.element-item {
    width: 49%;
}

.gallery.type3 .galleryImg,
.gallery.type4 .galleryImg {
    height: 570px;
}

.gallery.type5 .galleryImg,
.gallery.type6 .galleryImg {
    height: 279px;
}

@media (max-width: 991px) {
    .gallery.element-item,
    .gallery.type2.element-item {
        width: 49%;
    }
}

@media (max-width: 767px) {
    .gallery.element-item,
    .gallery.type2.element-item,
    .gallery.type3.element-item,
    .gallery.type6.element-item {
        width: 99%;
    }

    .gallery.type3 .galleryImg,
    .gallery.type4 .galleryImg,
    .gallery.type5 .galleryImg,
    .gallery.type6 .galleryImg {
        height: 400px;
    }
}

.galleryImg {
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
    height: 400px;
}

.grid.type2 .galleryImg {
    height: 300px;
}

.gallery.width1 {
    height: 700px;
}

.grid:after {
    content: '';
    display: block;
    clear: both;
}

.gallery.element-item:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background-color: transparent;
    border: 3px solid #fff;
}

.gallery.element-item:after {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background-color: #c14c67;
    border: 15px solid #fff;
    opacity: 0;
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}

.galleryHidden {
    text-align: center;
    width: 100%;
    position: absolute;
    top: 80%;
    z-index: 5;
    opacity: 0;
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}

.galleryHidden .simple-text .h3,
.galleryHidden .simple-text p {
    color: #fff;
}

.gallery.element-item:hover:after {
    opacity: 0.9;
}

.gallery.element-item:hover .galleryHidden {
    opacity: 1;
    top: 50%;
    bottom: inherit;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
}

.button-group.type-2 .btnGallery {
    font-size: 18px;
}

.btnGallery {
    text-transform: uppercase;
    font-size: 14px;
    letter-spacing: 1px;
    background-color: transparent;
    border: none;
    color: #afafaf;
    margin-right: 40px;
    -webkit-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}

.btnGallery:last-child {
    margin-right: 0;
}

@media (max-width: 991px) {
    .btnGallery {
        margin-right: 30px;
    }
}

@media (max-width: 767px) {
    .btnGallery {
        margin-bottom: 15px;
        margin-right: 0;
    }
}

.btnGallery:hover,
.btnGallery.is-checked {
    color: #FDA1A4;
}

.servicesImages {
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
    height: 770px;
}
/* ... */

